--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "scripts": {
     "dev": "webpack serve --open",
     "build": "webpack",
-    "build:prod": "cross-env NODE_ENV=production webpack"
+    "build:prod": "cross-env NODE_ENV=production webpack",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.169",
     "cross-env": "^7.0.3",
+    "jest": "^27.1.0",
+    "ts-jest": "^27.0.5",
     "ts-loader": "^9.1.2",
-    "typescript": "^4.2.4",
+    "typescript": "^4.4.2",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
