--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,15 @@
 {
-    "compilerOptions": {
-      "outDir": "./dist/",
-      "noImplicitAny": true,
-      "sourceMap": true,
-      "noUnusedLocals": true,
-      "module": "es6",
-      "allowSyntheticDefaultImports": true,
-      "target": "es5",
-      "lib": [
-        "es5",
-        "dom"
-    ],
-      "allowJs": true,
-      "moduleResolution": "node",
-    },
-    "exclude": ["dist", "build", "node_modules"]
-  }
+  "compilerOptions": {
+    "outDir": "./dist/",
+    "noImplicitAny": true,
+    "sourceMap": true,
+    "noUnusedLocals": true,
+    "module": "es6",
+    "allowSyntheticDefaultImports": true,
+    "target": "es5",
+    "lib": ["es5", "dom"],
+    "allowJs": true,
+    "moduleResolution": "node"
+  },
+  "exclude": ["dist", "build", "node_modules"]
+}
